# Product_Describer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SYSTEM_STATUS.md  alembic.ini  clear_db_generations.py  docker-compose.yml  entrypoint.sh  pyproject.toml  test_e2e.py  test_integration.py  test_simple_upload.py  test_upload.py
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: cf5f6be2f015_initial_schema_with_users_products_.py
data/: .gitkeep
docs/: ANALYSIS_PROMPT_IMPROVEMENTS.md  ARCHITECTURE.md  BACKEND_DATABASE_PLAN.md  Code_Refactoring_012626.md  Code_Refactoring_012726.md  DATABASE_SCHEMA.md  DEBUG_ANALYSIS_012726.md  DEVELOPER.md  EXECUTION_PLAN.md  FRONTEND_APPLICATION_PLAN.md  GENERATION_PROMPT.md  GENERATION_PROMPT_IMPROVEMENTS.md  POTENTIAL_PROMPT_IMPROVEMENTS.md  README.md  SPECIFICATION_EDITOR_PLAN.md  TEMPLATE_IMPLEMENTATION_012626.md  YAML_TEMPLATE_PROPOSAL.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/context/: AuthContext.tsx
frontend/hooks/: use-toast.ts  useGeneration.ts  useProducts.ts
scripts/: start.sh  stop.sh
src/backend/: __init__.py  auth.py  config.py  database.py  main.py  seed.py
src/product_describer/: __init__.py  config.py  constants.py  exceptions.py  generate_test.py  gpt_analyzer.py  image_handler.py  logger.py  main.py  template_manager.py
temp/: .gitkeep
templates/: README.md  product_analysis_v1.0.yaml
tests/: __init__.py  test_config.py  test_gpt_analyzer.py  test_image_handler.py  test_main.py
(+35 files in other folders)
