[tool.poetry]
name = "product-describer"
version = "0.1.0"
description = "A Python product built with Poetry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "product_describer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.54.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
pillow = "^10.0.0"
google-genai = "^1.60.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
